--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@
 
       <div class="portrait-title">
 
-        <h2>Nelson Bighetti</h2>
+        <h2>Ernest Fedorina</h2>
 
         <h3>Professor of Artificial Intelligence</h3>
 
