--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   
   
 
-  <meta name="author" content="Ernest Fedorina" />
+  <meta name="author" content="Nelson Bighetti" />
 
   
   
@@ -869,12 +869,12 @@
       
       <img class="avatar avatar-circle"
            width="270" height="270"
-           src="/authors/admin/avatar_hu52a603635ecebd45650b162dadabb4e5_12861_270x270_fill_q75_lanczos_center.jpg" alt="Ernest Fedorina">
+           src="/authors/admin/avatar_hu52a603635ecebd45650b162dadabb4e5_12861_270x270_fill_q75_lanczos_center.jpg" alt="Nelson Bighetti">
       
 
       <div class="portrait-title">
 
-        <h2>Ernest Fedorina</h2>
+        <h2>Nelson Bighetti</h2>
 
         <h3>Professor of Artificial Intelligence</h3>
 
