--- a/talk/example-talk/index.html
+++ b/talk/example-talk/index.html
@@ -1096,8 +1096,8 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://example.com/">Ernest Fedorina</a></h5>
-      <h6 class="card-subtitle">Professor of Artificial Intelligence</h6>
-      <p class="card-text">My research interests include distributed robotics, mobile computing and programmable matter.</p>
+      <h6 class="card-subtitle">Студент</h6>
+      <p class="card-text">Я студент, люблю языки, музыку, занимаюсь бегом, учусь в университете на технической специальности.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
